sort.basic.insertion.AlgInsertionSort.scala.code
def insertionSort() {
  
  for(i<- 1 to getValueCount()-1){
	  var indLastValue = i;
    var v = getValue(i);
    
		sauter(j, i, indLastValue, v);
  }
  
}


def sauter(j:Int, i:Int, indLastValue:Int, v:Int){
  for(j <- 0 to i-1){
    if(getValue(i-j-1) > v){
      copy(i-j-1,i-j);
    }
    else {
    	setValue(i-j-1, v);
    	return;
    }
  }
}